fixing navbar toggler visibility when navbar is transparent

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,7 +3,7 @@
     background-color: rgba(255, 255, 255, 0);
     transition: background-color 0.3s ease;
     color: white;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(7px);
 }
 
 .navbar-transparent .nav-link {
@@ -11,6 +11,12 @@
     transition: color 0.3s ease;
     font-weight: bold;
 }
+
+.navbar-transparent .navbar-toggler {
+    border-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255,255,255, 0.3);
+}
+
 /* Solid navbar */
 .navbar-solid {
     background-color: #ffffff;
